# kilne-git

./: .gitignore  AGENTS.md  README.md  app.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
modules/kilne-git-native/: KilneGitNative.podspec  expo-module.config.json  nitro.json  package.json  react-native.config.js
modules/kilne-git-native/android/: CMakeLists.txt  build.gradle
modules/kilne-git-native/android/src/main/: AndroidManifest.xml
modules/kilne-git-native/android/src/main/cpp/: CMakeLists.txt  GitErrors.cpp  GitErrors.hpp  GitMerge.cpp  GitMerge.hpp  GitRaii.cpp  GitRaii.hpp  GitRepoOps.cpp  GitRepoOps.hpp  HybridGit.cpp  HybridGit.hpp  cpp-adapter.cpp
modules/kilne-git-native/android/src/main/java/com/margelo/nitro/kilne/git/: AllFilesAccessModule.kt  KilneGitNativePackage.kt
modules/kilne-git-native/src/: Git.nitro.ts  index.ts
plugins/: withShortNativeBuildPaths.js
scripts/: generate_app_icon.py
src/: store.ts
src/app/: _layout.tsx  add.tsx  index.tsx
src/app/repo/: [id].tsx
src/components/: ActionButton.tsx  Field.tsx  RepoCard.tsx  themed-text.tsx  themed-view.tsx
src/constants/: theme.ts
src/hooks/: use-sync.ts  use-theme.ts
src/services/: git.ts  secure.ts  shared-storage-access.ts  storage.ts  sync.ts
src/types/: repo.ts
src/utils/: commit.ts
