cmake_minimum_required(VERSION 3.22.1)
project(KilneGitNative LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)

# ----------------------------------------------------------------------------
# Pin every dependency so builds are reproducible. Sources are fetched once and
# cached under build/_deps; subsequent configures are instant.
#
# NOTE: URL_HASH lines are intentionally omitted so that pinning can be verified
# manually after the first successful build (the hashes get printed in the
# configure log). Add them back once you've confirmed a known-good download.
# ----------------------------------------------------------------------------

# ---- zlib -------------------------------------------------------------------
FetchContent_Declare(
        zlib
        URL https://zlib.net/fossils/zlib-1.3.1.tar.gz
)
set(ZLIB_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(zlib)

# ---- http-parser (used by libgit2 for HTTP transport) -----------------------
FetchContent_Declare(
        http-parser
        GIT_REPOSITORY https://github.com/nodejs/http-parser.git
        GIT_TAG        v2.9.4
)
FetchContent_GetProperties(http-parser)
if(NOT http-parser_POPULATED)
  FetchContent_Populate(http-parser)
  add_library(http-parser STATIC ${http-parser_SOURCE_DIR}/http_parser.c)
  target_include_directories(http-parser PUBLIC ${http-parser_SOURCE_DIR})
endif()

# ---- mbedTLS (TLS for HTTPS) ------------------------------------------------
FetchContent_Declare(
        mbedtls
        URL https://github.com/Mbed-TLS/mbedtls/releases/download/mbedtls-3.6.2/mbedtls-3.6.2.tar.bz2
)
set(ENABLE_TESTING           OFF CACHE BOOL "" FORCE)
set(ENABLE_PROGRAMS          OFF CACHE BOOL "" FORCE)
set(MBEDTLS_FATAL_WARNINGS  OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(mbedtls)

# ---- libgit2 ----------------------------------------------------------------
FetchContent_Declare(
        libgit2
        URL https://github.com/libgit2/libgit2/releases/download/v1.9.0/libgit2-1.9.0.tar.gz
)
set(BUILD_SHARED_LIBS       OFF CACHE BOOL "" FORCE)
set(BUILD_TESTS             OFF CACHE BOOL "" FORCE)
set(BUILD_CLI               OFF CACHE BOOL "" FORCE)
set(BUILD_EXAMPLES          OFF CACHE BOOL "" FORCE)
set(USE_SSH                 OFF CACHE BOOL "" FORCE)  # SSH not in MVP
set(USE_HTTP_PARSER         "http-parser" CACHE STRING "" FORCE)
set(HTTP_PARSER_LIBRARY     "http-parser" CACHE STRING "" FORCE)
set(HTTP_PARSER_INCLUDE_DIR "${http-parser_SOURCE_DIR}" CACHE PATH "" FORCE)
set(USE_BUNDLED_ZLIB        OFF CACHE BOOL "" FORCE)
set(ZLIB_LIBRARY            zlibstatic CACHE STRING "" FORCE)
set(ZLIB_INCLUDE_DIR        "${zlib_SOURCE_DIR}" "${zlib_BINARY_DIR}" CACHE PATH "" FORCE)
set(REGEX_BACKEND           "builtin" CACHE STRING "" FORCE)
set(USE_ICONV               OFF CACHE BOOL "" FORCE)
set(USE_NTLMCLIENT          OFF CACHE BOOL "" FORCE)
set(USE_HTTPS               "mbedTLS" CACHE STRING "" FORCE)
set(MBEDTLS_LIBRARY         mbedtls    CACHE STRING "" FORCE)
set(MBEDX509_LIBRARY        mbedx509   CACHE STRING "" FORCE)
set(MBEDCRYPTO_LIBRARY      mbedcrypto CACHE STRING "" FORCE)
set(MBEDTLS_INCLUDE_DIR     "${mbedtls_SOURCE_DIR}/include" CACHE PATH "" FORCE)
FetchContent_MakeAvailable(libgit2)

# ----------------------------------------------------------------------------
# Our Nitro module
#
# NB: the target name MUST be "KilneGitNative" because Nitrogen's autogenerated
# `KilneGitNative+autolinking.cmake` references it by that literal name.
# ----------------------------------------------------------------------------
add_library(KilneGitNative SHARED
        cpp-adapter.cpp
        HybridGit.cpp
        GitErrors.cpp
        GitRaii.cpp
)

target_include_directories(KilneGitNative PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
)

# The autogenerated include path below also adds nitrogen/generated/shared/c++
# to the search path so HybridGit.hpp can resolve "HybridGitSpec.hpp".
target_link_libraries(KilneGitNative PRIVATE
        libgit2
        http-parser
        zlibstatic
        mbedtls
        mbedx509
        mbedcrypto
)

# Pull in Nitrogen's autolinking: adds generated source files + include dirs +
# links against NitroModules, fbjni and ReactAndroid.
include(${CMAKE_SOURCE_DIR}/../nitrogen/generated/android/KilneGitNative+autolinking.cmake)
