cmake_minimum_required(VERSION 3.22.1)
project(KilneGitNative LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)

# ----------------------------------------------------------------------------
# Pin every dependency so builds are reproducible. Sources are fetched once and
# cached under build/_deps; subsequent configures are instant.
#
# Prefer GIT_REPOSITORY over GitHub Releases/archive tarball URLs: the redirect
# host release-assets.githubusercontent.com often times out (curl 28) even when
# github.com itself is reachable. Git clones go to github.com and work reliably.
# zlib stays on zlib.net (no GitHub CDN involved).
# ----------------------------------------------------------------------------

# ---- zlib -------------------------------------------------------------------
FetchContent_Declare(
        zlib
        URL https://zlib.net/fossils/zlib-1.3.1.tar.gz
)
set(ZLIB_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(zlib)

# ---- http-parser (used by libgit2 for HTTP transport) -----------------------
FetchContent_Declare(
        http-parser
        GIT_REPOSITORY https://github.com/nodejs/http-parser.git
        GIT_TAG        v2.9.4
        GIT_SHALLOW    TRUE
)
FetchContent_GetProperties(http-parser)
if(NOT http-parser_POPULATED)
  FetchContent_Populate(http-parser)
  add_library(http-parser STATIC ${http-parser_SOURCE_DIR}/http_parser.c)
  target_include_directories(http-parser PUBLIC ${http-parser_SOURCE_DIR})
endif()

# ---- mbedTLS (TLS for HTTPS) ------------------------------------------------
# v3.6+ needs the `framework` git submodule; FetchContent fetches it by default.
FetchContent_Declare(
        mbedtls
        GIT_REPOSITORY https://github.com/Mbed-TLS/mbedtls.git
        GIT_TAG        v3.6.2
        GIT_SHALLOW    TRUE
)
set(ENABLE_TESTING           OFF CACHE BOOL "" FORCE)
set(ENABLE_PROGRAMS          OFF CACHE BOOL "" FORCE)
set(MBEDTLS_FATAL_WARNINGS  OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(mbedtls)

# ---- libgit2 ----------------------------------------------------------------
FetchContent_Declare(
        libgit2
        GIT_REPOSITORY https://github.com/libgit2/libgit2.git
        GIT_TAG        v1.9.0
        GIT_SHALLOW    TRUE
)
set(BUILD_SHARED_LIBS       OFF CACHE BOOL "" FORCE)
set(BUILD_TESTS             OFF CACHE BOOL "" FORCE)
set(BUILD_CLI               OFF CACHE BOOL "" FORCE)
set(BUILD_EXAMPLES          OFF CACHE BOOL "" FORCE)
set(USE_SSH                 OFF CACHE BOOL "" FORCE)  # SSH not in MVP
set(USE_HTTP_PARSER         "http-parser" CACHE STRING "" FORCE)
set(HTTP_PARSER_LIBRARY     "http-parser" CACHE STRING "" FORCE)
set(HTTP_PARSER_INCLUDE_DIR "${http-parser_SOURCE_DIR}" CACHE PATH "" FORCE)
set(USE_BUNDLED_ZLIB        OFF CACHE BOOL "" FORCE)
set(ZLIB_LIBRARY            zlibstatic CACHE STRING "" FORCE)
set(ZLIB_INCLUDE_DIR        "${zlib_SOURCE_DIR}" "${zlib_BINARY_DIR}" CACHE PATH "" FORCE)
set(REGEX_BACKEND           "builtin" CACHE STRING "" FORCE)
set(USE_ICONV               OFF CACHE BOOL "" FORCE)
set(USE_NTLMCLIENT          OFF CACHE BOOL "" FORCE)
set(USE_HTTPS               "mbedTLS" CACHE STRING "" FORCE)
set(MBEDTLS_LIBRARY         mbedtls    CACHE STRING "" FORCE)
set(MBEDX509_LIBRARY        mbedx509   CACHE STRING "" FORCE)
set(MBEDCRYPTO_LIBRARY      mbedcrypto CACHE STRING "" FORCE)
set(MBEDTLS_INCLUDE_DIR     "${mbedtls_SOURCE_DIR}/include" CACHE PATH "" FORCE)
FetchContent_MakeAvailable(libgit2)

# ----------------------------------------------------------------------------
# Our Nitro module
#
# NB: the target name MUST be "KilneGitNative" because Nitrogen's autogenerated
# `KilneGitNative+autolinking.cmake` references it by that literal name.
# ----------------------------------------------------------------------------
add_library(KilneGitNative SHARED
        cpp-adapter.cpp
        HybridGit.cpp
        GitErrors.cpp
        GitRaii.cpp
)

target_include_directories(KilneGitNative PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
)

# The autogenerated include path below also adds nitrogen/generated/shared/c++
# to the search path so HybridGit.hpp can resolve "HybridGitSpec.hpp".
target_link_libraries(KilneGitNative PRIVATE
        libgit2
        http-parser
        zlibstatic
        mbedtls
        mbedx509
        mbedcrypto
)

# Pull in Nitrogen's autolinking: adds generated source files + include dirs +
# links against NitroModules, fbjni and ReactAndroid.
# Path: android/src/main/cpp → ../../../../ → module root (kilne-git-native/).
include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../nitrogen/generated/android/KilneGitNative+autolinking.cmake)
